* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 8.7.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 8.6.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Sep 06 2023 Steven Pritchard <steve@sicura.us> - 8.5.0
- Add AlmaLinux 8 support
- Add support and fixes for Puppet 8 and stdlib 9
- Drop support for Puppet 6
- Update module dependencies
- Update gem dependencies
- Clean up Gemfile for rubocop

* Mon Jul 31 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.4.0
- Add RockyLinux 8 support

* Sat Jul 30 2022 Trevor Vaughan <trevor@sicura.us> - 8.3.1
- Support puppetlabs-inifile < 6

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.3.0
- Update from camptocamp/systemd to puppet/systemd

* Tue Aug 17 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0
- Change all instances of pupmod::master adding items to the `master` section to
  use `server` instead
- Update pupmod::conf to automatically switch `master` to `server`
- Automatically remove items from the puppet config in the `master` section that
  are set in the `server` section
- Added pupmod::master::sysconfig::use_code_cache_flushing to reduce excessive
  memory usage
- Removed SHA1 ciphers from the server cipher list
- Disable the internal Red Hat FIPS option in the puppet server

* Wed Jul 28 2021 Andy Adrian <andy.adrian@onyxpoint.com> - 8.2.0
- Updated pupmod::puppet_server to accept Array as well as single hosts
- Updated pupmod::pass_two to configure server_list when multiple puppet_server
  are specified
- Updated pupmod::server_distribution to check server_list for puppet_user

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib
